--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="capa">
-            <img src="img/capa1.jpg" alt="">
+            <img src="img/capa.jpg" alt="">
 
         </div>
 
