barra de rolagem no feed e max-height

--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
 
             </div>
 
+            <div class="postagem-feed">
+                <div>
+                    <div class="cabecalho-postagem" >
+                        <img class="perfil-mini" src="img/quantas-horas-um-cachorro-dorme (1).jpg" alt="">
+                    <h3>Lulu</h3>
+                    </div>
+                    
+                    <img src="img/cachorro-tomando-banho.jpg" alt="">
+                </div>
+                <h2>Tomando um banho gostoso</h2>
+                <p>Minha humana é maravilhosa, cuida de mim como ninguém.</p>
+
+
+            </div>
+
+            <div class="postagem-feed">
+                <div>
+                    <div class="cabecalho-postagem" >
+                        <img class="perfil-mini" src="img/quantas-horas-um-cachorro-dorme (1).jpg" alt="">
+                    <h3>Lulu</h3>
+                    </div>
+                    
+                    <img src="img/cachorro-tomando-banho.jpg" alt="">
+                </div>
+                <h2>Tomando um banho gostoso</h2>
+                <p>Minha humana é maravilhosa, cuida de mim como ninguém.</p>
+
+
+            </div>
+
         </div>
 
         <div class="container-Dir">
