--- a/amigo1.html
+++ b/amigo1.html
@@ -19,11 +19,11 @@
 
 
             <li>
-                <a href="">Perfil</a>
+                <a href="index.html">Perfil</a>
             </li>
 
             <li>
-                <a href="">Galeria</a>
+                <a href="galeria.html">Galeria</a>
             </li>
 
             <li>
@@ -35,11 +35,11 @@
             </li>
 
             <li>
-                <a href="">Login</a>
+                <a href="login.html">Login</a>
             </li>
 
             <li>
-                <a href="">Cadastro</a>
+                <a href="cadastro.html">Cadastro</a>
             </li>
 
 
@@ -54,7 +54,7 @@
 
     <div class="perfil-capa">
         <div class="perfil">
-            <img src="img/pinther.jpg" alt="">
+            <img src="img/perfil-pinther.jpg" alt="">
             <H1>Mutley </H1>
             
         </div>
