--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
             <h1>Faça seu cadastro</h1>
             <div>
                 <label for="">
-                    <input class="input-cadastro" type="text" placeholder="Nome do pet">
+                  <img src="img/" alt="">  <input class="input-cadastro" type="text" placeholder="Nome do pet">
                 </label>
             </div>
 
