--- a/amigo1.html
+++ b/amigo1.html
@@ -71,7 +71,7 @@
     <div class="feed">
         <div class="container-Esq">
             <div class="info-capa">
-                <h2>Raça: Pinther</h2>
+                <h2>Raça: Pintcher</h2>
                 <h2>Sexo: Macho</h2>
                 <h2>Idade: 2 Anos</h2>
                 <h2>Cidade: Marília</h2>
