--- a/cadastro.html
+++ b/cadastro.html
@@ -28,7 +28,7 @@
 
 
 
-        <div class="div-form-cadastro">
+        <div class="div-form-cadastro2">
             <h1>Faça seu cadastro</h1>
             <div>
                 <label for="">
@@ -53,6 +53,12 @@
 
             <div>
                 <label for="">
+                    <input class="input-cadastro" type="text" placeholder=" Nome do Criador">
+                </label>
+            </div>
+
+            <div>
+                <label for="">
                     <input class="input-cadastro" type="text" placeholder=" Nome do Responsável">
                 </label>
             </div>
@@ -72,6 +78,40 @@
             <div>
                 <label  for="">
                     <input class="input-cadastro" type="password" placeholder="Senha">
+                </label>
+            </div>
+
+            
+            <div>
+                <label for="">
+                  <img src="img/" alt="">  <input class="input-cadastro" type="text" placeholder="Raça">
+                </label>
+            </div>
+
+            <div>
+                <label for="">
+                    <input class="input-cadastro" type="number" placeholder="Peso">
+                </label>
+            </div>
+
+            <div class="sexo">
+                <h3>Sexo</h3>
+                <label for="">
+                   <input type="radio" value="macho">Macho 
+                   <input type="radio" value="sim">Fêmea
+
+                    </select>
+                </label>
+            </div>
+            <br>
+            
+            <div class="castrado">
+                <h3>Castrado</h3>
+                <label for="">
+                   <input type="radio" value="sim">Sim 
+                   <input type="radio" value="sim">Não
+
+                    </select>
                 </label>
             </div>
 
