--- a/cuidados.html
+++ b/cuidados.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hackathon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -243,10 +243,13 @@
 
 
                 <div class="racao">
-                    <h2>Ração Recomentada: </h2>
+                    <h2>Ração Recomentada: </h2><br>
+
                     <h2>Qtd Diária Recomendada:     </h2>
 
                 </div>
+
+                <button><a href="https://ondecomprar.adimax.com.br/">ONDE COMPRAR</a></button>
 
                 <hr>
 
