--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
                 <a href="galeria.html">Galeria</a>
             </li>
 
-            <li>
-                <a href="">Amigos</a>
-            </li>
+           
 
             <li>
-                <a href="">Meus Cuidados</a>
+                <a href="cuidados.html">Meus Cuidados</a>
             </li>
 
             <li>
