--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 
             </div>
 
-            <h1>Amigos</h1>
+            <h1>Fotos</h1>
 
             <div class="fotos-capa">
 
 
-                img src="cachorro/64155_shutterstock-466224974.jpg" alt="">
+                <img src="cachorro/64155_shutterstock-466224974.jpg" alt="">
 
             
 
