--- a/cadastro.html
+++ b/cadastro.html
@@ -23,7 +23,7 @@
 
     <div class="div-principal-cadastro">
         <div class="div-img-cadastro">
-            <img src="img/Sem título.jpg" alt="">
+            <img src="img/Sem título.jpg.jpeg" alt="">
         </div>
 
 
