--- a/amigo8.html
+++ b/amigo8.html
@@ -20,18 +20,17 @@
 
             <li>
                 <a href="index.html">Perfil</a>
+                
             </li>
 
             <li>
                 <a href="galeria.html">Galeria</a>
             </li>
 
-            <li>
-                <a href="">Amigos</a>
-            </li>
+           
 
             <li>
-                <a href="">Meus Cuidados</a>
+                <a href="cuidados.html">Meus Cuidados</a>
             </li>
 
             <li>
