--- a/galeria.html
+++ b/galeria.html
@@ -19,28 +19,28 @@
 
 
             <li>
-                <a href="">Perfil</a>
+                <a href="index.html">Perfil</a>
+                
             </li>
 
             <li>
-                <a href="">Galeria</a>
+                <a href="galeria.html">Galeria</a>
+            </li>
+
+           
+
+            <li>
+                <a href="cuidados.html">Meus Cuidados</a>
             </li>
 
             <li>
-                <a href="">Amigos</a>
+                <a href="login.html">Login</a>
             </li>
 
             <li>
-                <a href="">Meus Cuidados</a>
+                <a href="cadastro.html">Cadastro</a>
             </li>
 
-            <li>
-                <a href="">Login</a>
-            </li>
-
-            <li>
-                <a href="">Cadastro</a>
-            </li>
 
 
 
